changes in founders

--- a/views/founders.ejs
+++ b/views/founders.ejs
@@ -13,7 +13,7 @@
 <body>
 
     <!-- founder page -->
-    <%- include("partials/nav"); -%>
+    <!--  include("partials/nav");  -->
         <section class="first-page">
             <div class="founder-page">
                 <div class="founder-container">
@@ -149,7 +149,7 @@
             </div>
 
         </section>
-        <%- include("partials/footer"); -%>
+        <!--  include("partials/footer");  -->
 </body>
 
 </html>
