--- a/views/founders.ejs
+++ b/views/founders.ejs
@@ -1,56 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/founder.css" media="screen">
-    <!-- <link rel="stylesheet" href="./css/styles.css"> -->
     <title>Founders</title>
 </head>
-
 <body>
 
     <!-- founder page -->
-    <!--  include("partials/nav");  -->
-        <section class="first-page">
-            <div class="founder-page">
-                <div class="founder-container">
-                    <div class="founder-layout founder-layout-1">
-                        <h1 class="founder-heading">Dr. D.Y. Patil</h1>
-                        <p class="para para1">
-                            <span style="font-weight: 400;">In India, ​honourable&nbsp;Dr. D Y Patil is a well-known
-                                educationist and philanthropist. His vision has helped in buildingthe Indian
-                                education industry over the last 40 years. He is well known for his commitment
-                                towards developing largerplatforms for students and faculty; and encouraging
-                                universities and institutions for providing high quality education&nbsp;and service
-                                to society.<br>
-                                <br>He envisioned that, the Indian youth needs quality education to unleash their
-                                potential and make positive impact in&nbsp;their professional life. In 1983, the
-                                first engineering college affiliated with Mumbai University named as Ramrao
-                                AdikInstitute of Technology (RAIT) was started in Navi Mumbai. Today under the
-                                father founder’s able leadership, Five DeemedUniversities and more than 150
-                                education institutions are successfully running in the Indian subcontinent.Students
-                                from pan India and other countries are currently studying at various campuses.
-                            </span>
-                        </p>
-                    </div>
+
+    <section class="first-page">
+        <div class="founder-page">
+            <div class="founder-container">
+                <div class="founder-layout founder-layout-1">
+                    <h1 class="founder-heading">Dr. D.Y. Patil</h1>
+                    <p class="para para1">
+                        <span style="font-weight: 400;">In India, ​honourable&nbsp;Dr. D Y Patil is a well-known
+                            educationist and philanthropist. His vision has helped in buildingthe Indian
+                            education industry over the last 40 years. He is well known for his commitment
+                            towards developing largerplatforms for students and faculty; and encouraging
+                            universities and institutions for providing high quality education&nbsp;and service
+                            to society.<br>
+                            <br>He envisioned that, the Indian youth needs quality education to unleash their
+                            potential and make positive impact in&nbsp;their professional life. In 1983, the
+                            first engineering college affiliated with Mumbai University named as Ramrao
+                            AdikInstitute of Technology (RAIT) was started in Navi Mumbai. Today under the
+                            father founder’s able leadership, Five DeemedUniversities and more than 150
+                            education institutions are successfully running in the Indian subcontinent.Students
+                            from pan India and other countries are currently studying at various campuses.
+                        </span>
+                    </p>
                 </div>
+            </div>
 
-                <!-- founders image -->
+            <!-- founders image -->
 
-                <div class="founder-image">
-                    <div class="founder-layout founder-layout-2"></div>
+            <div class="founder-image">
+                <div class="founder-layout founder-layout-2"></div>
                     <div class="founder-layout founder-layout-3">
 
                         <!-- his quote -->
 
                         <div class="thought-container">
                             <p class="para3"><b>“Ego is death of life; death of ego is
-                                    real life” - One has to understand that lesser the knowledge more the
-                                    ego,&nbsp;more the knowledge lesser the ego. By understanding and practicing
-                                    this in life one will be at peace.</b>
+                            real life” - One has to understand that lesser the knowledge more the
+                            ego,&nbsp;more the knowledge lesser the ego. By understanding and practicing
+                            this in life one will be at peace.</b>
                             </p>
                             <h4 class="para4"><b>Dr. D.Y. Patil</b>
                             </h4>
@@ -58,98 +55,78 @@
                     </div>
                 </div>
             </div>
-            </div>
-        </section>
+        </div>
+    </section>
 
-        <!-- vijay patil -->
+    <!-- vijay patil -->
 
-        <section class="second-page">
-            <div class="chancellor-image ch-vc-image">
+    <section class="second-page">
+        <div class="chancellor-image ch-vc-image">
 
-                <!-- chancellors image -->
+            <!-- chancellors image -->
 
-                <div class="ch-vc-layout chancellor-layout-1">
-                    <div class="chancellor-img">
-                        <img src="./logo/chancellor.jpeg" alt="" id="chan-img">
-                    </div>
-                    <h2 class="chancellor-heading"> Knowledge, acumen, intelligence and expertise can only function at
-                        the peak of their capacity when the body is healthy
-                        and strong</h2>
+            <div class="ch-vc-layout chancellor-layout-1">
+                <div class="chancellor-img">
+                    <img src="./logo/chancellor.jpeg" alt="" id="chan-img">
                 </div>
+                <h2 class="chancellor-heading"> Knowledge, acumen, intelligence and expertise can only function at the peak of their capacity when the body is healthy
+                and strong</h2>
             </div>
+        </div>
 
-            <!-- body -->
+        <!-- body -->
 
-            <div class="chancellor-page ch-vc-page">
-                <div class="chancellor-container">
-                    <h1 style="margin-bottom: 0; font-size: 2rem;">Vijay Patil</h1>
-                    <h3 style="margin-top: 0;">President & Chancellor</h3>
-                    <p id="para5">
-                        A young Dynamic leader and fervent entrepreneur Dr. Vijay Patil, President and Chancellor of D Y
-                        Patil
-                        University, Pune,&nbsp;is passionately working in the field of education, medical science and
-                        sports in India.
-                        Universities are engaged runningthe UG and PG programs under various schools namely engineering,
-                        medical,
-                        science, pharmacy, law, agriculture, biotechnology,architecture, design, management and sports
-                        programs.&nbsp;<br>Being a strategist, he is strengthening various policies and systems for the
-                        academic
-                        standards, management and administration.Strategic plans designed by him are emphasized on
-                        creation of
-                        universities and institutions as future makers in the 21st&nbsp;Century. His guidance to
-                        universities for
-                        initiating new innovative programs, designing undergraduate and postgraduatedegree programs in
-                        the context of
-                        changing economy, technology and required industry competencies; research initiatives&nbsp;and
-                        collaboration,
-                        industry and academia partnerships, internationalization, creation of infrastructure and
-                        development of Human
-                        resources are commendable.
-                    </p>
+        <div class="chancellor-page ch-vc-page">  
+            <div class="chancellor-container">
+                <h1 style="margin-bottom: 0; font-size: 2rem;">Vijay Patil</h1>
+                <h3 style="margin-top: 0;">President & Chancellor</h3>
+                <p id="para5">
+                    A young Dynamic leader and fervent entrepreneur Dr. Vijay Patil, President and Chancellor of D Y Patil
+                    University, Pune,&nbsp;is passionately working in the field of education, medical science and sports in India.
+                    Universities are engaged runningthe UG and PG programs under various schools namely engineering, medical,
+                    science, pharmacy, law, agriculture, biotechnology,architecture, design, management and sports
+                    programs.&nbsp;<br>Being a strategist, he is strengthening various policies and systems for the academic
+                    standards, management and administration.Strategic plans designed by him are emphasized on creation of
+                    universities and institutions as future makers in the 21st&nbsp;Century. His guidance to universities for
+                    initiating new innovative programs, designing undergraduate and postgraduatedegree programs in the context of
+                    changing economy, technology and required industry competencies; research initiatives&nbsp;and collaboration,
+                    industry and academia partnerships, internationalization, creation of infrastructure and development of Human
+                    resources are commendable.
+                </p>
+            </div>
+            
+        </div>
+    </section>
+
+    <!-- VC section -->
+
+    <section class="third-page">
+        
+        <div class="vc-page ch-vc-page">
+            <div class="vc-container">
+                <div class="vc-img">
+                    <img src="./logo/vc.jpg" alt="" id="vc-img" width=" 250px;">
                 </div>
-
+                <p class=" para para6">
+                    Prof (Dr.) Sayalee Gankar has 29 years of experience in academics and industry. She has experience as Dean – Management
+                    (PG),Dean – Academics and Director of two business schools at MIT, Pune.<br>She is a research guide and eight research
+                    students have completed doctoral programmes under her guidance. Worked as Board ofStudies Chairman and member at
+                    Savitribai Phule Pune University, JKLU, SIU and NIBM.<br>Her areas of expertise are in academic leadership, specializing
+                    areas of Strategic Planning, institution building, AcademicProgramming &amp; Planning, Developing Policies &amp;
+                    Procedures, Syllabus Framework, Research, Consultancy, Industry Collaborations, Rankings and Accreditation.<br>She has
+                    delivered plenary Academic &amp; Research sessions at Paris, Poland, Dubai, Bhutan and over 45 Research Publications
+                    atNational and International Level are at her credit. She was solicited for International Conferences and
+                    attended&nbsp;International Conferences in the UK, Washington, USA and Paris.</b>
+                </p>
             </div>
-        </section>
-
-        <!-- VC section -->
-
-        <section class="third-page">
-
-            <div class="vc-page ch-vc-page">
-                <div class="vc-container">
-                    <div class="vc-img">
-                        <img src="./logo/vc.jpg" alt="" id="vc-img" width=" 250px;">
-                    </div>
-                    <p class=" para para6">
-                        Prof (Dr.) Sayalee Gankar has 29 years of experience in academics and industry. She has
-                        experience as Dean – Management
-                        (PG),Dean – Academics and Director of two business schools at MIT, Pune.<br>She is a research
-                        guide and eight research
-                        students have completed doctoral programmes under her guidance. Worked as Board ofStudies
-                        Chairman and member at
-                        Savitribai Phule Pune University, JKLU, SIU and NIBM.<br>Her areas of expertise are in academic
-                        leadership, specializing
-                        areas of Strategic Planning, institution building, AcademicProgramming &amp; Planning,
-                        Developing Policies &amp;
-                        Procedures, Syllabus Framework, Research, Consultancy, Industry Collaborations, Rankings and
-                        Accreditation.<br>She has
-                        delivered plenary Academic &amp; Research sessions at Paris, Poland, Dubai, Bhutan and over 45
-                        Research Publications
-                        atNational and International Level are at her credit. She was solicited for International
-                        Conferences and
-                        attended&nbsp;International Conferences in the UK, Washington, USA and Paris.</b>
-                    </p>
-                </div>
-            </div>
+        </div>
             <div class="vc-image ch-vc-image">
                 <div class="ch-vc-layout vc-layout-1">
                     <h3 class="u-custom-font u-font-montserrat u-text u-text-default u-text-2">Vice-Chancellor </h3>
                     <h1 class="u-custom-font u-font-montserrat u-text u-text-3">Dr. Sayalee Gankar</h1>
                 </div>
             </div>
-
-        </section>
-        <!--  include("partials/footer");  -->
+        
+    </section>
 </body>
-
 </html>
