--- a/public/css/exordium.css
+++ b/public/css/exordium.css
@@ -26,7 +26,7 @@ html, body{
 }
 
 
-.container-fluid .DYP{
+.container-fluid .DYP, .container-fluid .DYP-img{
     max-width: 650px;
     background: #EEEEEE;
     color: #222831;
@@ -34,7 +34,7 @@ html, body{
     padding: 40px;
 }
 
-.container-fluid .DYP {
+.container-fluid .DYP , .container-fluid .DYP-img{
   transform: perspective(1500px) rotateY(15deg);
   border-radius: 1rem;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
@@ -42,7 +42,7 @@ html, body{
   background: #EEEEEE;
 }
 
-.container-fluid .DYP:hover {
+.container-fluid .DYP:hover , .container-fluid .DYP-img:hover{
     transform: perspective(3000px) rotateY(20deg);
 }
 
@@ -65,7 +65,7 @@ html, body{
 
 .MUN .MUN-text{
     max-width: 600px;
-    z-index: 3;
+    z-index: 1;
     box-shadow: -20px 4px 20px 0px lightgrey;
 }
 
@@ -77,7 +77,7 @@ html, body{
 }
 
 .MUN-img{
-    z-index: 1;
+    z-index: 0;
     position: relative;
     max-width: 700px;
 }
@@ -87,7 +87,7 @@ html, body{
 .missions-sec .mission-text{
     max-width: 600px;
     padding: 40px;
-    box-shadow: 0px 0px 20px 0px #3d3d3d;;
+    box-shadow: 0px 0px 20px 0px #EEEEEE;;
 }
 
 .mission-text{
@@ -95,7 +95,7 @@ html, body{
     
 }
 
-.preparation-text ,.position-para, .position-points{
+.vision-text{
     box-shadow: 0px 0px 20px 0px #3d3d3d;
 }
 
@@ -103,121 +103,45 @@ html, body{
     background: #EEEEEE;
 }
 
-.prepare-sec{
+.vision-sec{
     height: 100%;
     background: #1B262C;
     color: #BBE1FA;
 }
 
-.prepare-sec .prepare-container{
+.vision-sec .vision-container{
     position: relative;
     top: 70%;
 }
 
-.prepare-sec .preparation-text{
+.vision-sec .vision-text{
     max-width: 600px;
     padding: 35px;
-}
-
-.position-para{
-    position: relative;
-    background: #1B262C;
-    color: #BBE1FA;
-    max-width: 600px;
-    padding: 35px;
-    border-radius: 10px;
-}
-
-.position-points{
-    background: #1B262C;
-    
-    color: #BBE1FA;
-    padding: 25px;
-    max-width: 770px;
-    position: relative;
-    
-    
-    margin-top: 60px;
-    border-radius: 10px;
-}
-
-.position-icon{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.pos-point{
-    padding: 10px;
-}
-
-h4{
-    margin-left: 10px;
-}
-
-.pos-para{ 
-    margin-left: 50px;
-}
-
-.position-para h3{
-    margin-bottom: 25px;
-}
-
-.openSpeech-and-Research-sec{
-    height: 150%;
-    background: #1B262C;
-}
-
-.openSpeech-and-Research-sec .opening,.openSpeech-and-Research-sec .research{
-    max-width: 700px;
-    background: #EEEEEE;
-    padding: 35px;
-    border-radius: 10px;
-    color: #393E46;
-}
-
-h1, h2, h3, h4{
-    color: #00ADB5;
-}
-
-.opening{
-    position: relative;
-    top: 15%;
-}
-
-.research{
-    position: relative;
-    top: 27%;
-}
-
-.opening h3, .research h3{
-    margin-bottom: 25px;
-}
-
-.resolution-and-profile-sec{
-    height: 160%;
-    background: #EEEEEE;
-}
-
-.resolution-and-profile-sec .container{
-    max-width: 500px;
-    padding: 35px;
-}
-
-
-.image-exo, .image-exo2{
-    width: fit-content;
 }
 
 #MUN-image{
     max-width: 700px;
 }
 
+
+
+h1, h2{
+    color: #00ADB5;
+}
+
+
 @media (min-width:1080px){
 
     .container-fluid .DYP{
         top: 30%;
         left: 20%;
+        box-shadow: -1px 0px 20px 10px #5f5f5fa1;
+    }
+
+    .container-fluid .DYP-img{
+        top: 20%;
+        left: 10%;
+        position: absolute;
     }
 
     #MUN-image{
@@ -245,7 +169,7 @@ h1, h2, h3, h4{
         height: 100%;
     }
 
-    .prepare-sec .prepare-container{
+    .vision-sec .vision-container{
         left: -12%;
     }
 
@@ -323,6 +247,10 @@ h1, h2, h3, h4{
         top: 30%;
     }
 
+    .container-fluid .DYP-img{
+        display: none;
+    }
+
     .MUN{
         position: relative;
         top: 42%;
@@ -333,17 +261,14 @@ h1, h2, h3, h4{
         max-width:100%;
     }
 
-    .MUN .MUN-img{
-        position: relative;
-        top: -32%;
-    }
+    
 
     .MUN .MUN-text{
         position: relative;
         top: 35%;
     }
 
-    .prepare-sec .prepare-container {
+    .vision-sec .vision-container {
         position: relative;
         top: 45%;
     }
@@ -357,12 +282,22 @@ h1, h2, h3, h4{
             height: 231%;
             top: -24%;
         }
+
+        .MUN .MUN-img{
+            position: relative;
+            top: -44%;
+        }
     }
 
     @media (min-width:400px){
         .position-paper{
             height: 200%;
             top: -24%;
+        }
+
+        .MUN .MUN-img{
+            position: relative;
+            top: -32%;
         }
     }
 
@@ -390,6 +325,10 @@ h1, h2, h3, h4{
 
 @media (max-width:1080px) and (min-width:900px){
 
+    .container-fluid .DYP-img{
+        display: none;
+    }
+
     .container-fluid .DYP{
         top: 30%;
         left: 16%;
@@ -416,68 +355,14 @@ h1, h2, h3, h4{
 
     }
 
-    .position-para{
-        left: 25%;    
-        
-        top: 24%;
-    }
-
-    .position-points{
-        left: 14%;
-        top: 25%;
-        display: grid;
-        grid-template-columns: auto auto;
-    }
-
-    .position-paper{
-        top: 34%;
-        height: 205%;
-    }
-
-    .openSpeech-and-Research-sec{
-        height: 140%;
-    }
-
-    .opening{
-        left: -11%;
-    }
-
-    .research{
-        left: 10%;
-    }
-
-    .resolution-and-profile-sec .resolution{
-        position: relative;
-        top: 4%;
-        left: -15%;
-    }
-
-    
-
-    .resolution-and-profile-sec .country-profile{
-        position: relative;
-        left: 8%;
-        top: -20%;
-    }
-
-    .image-exo{
-        position: relative;
-        top: -17%;
-        left: 60%;
-    }
-
-    .image-exo2{
-        position: relative;
-        top: -22%;
-        left: 8%;
-    }
-
-    #img-exo{
-        width: 250px;
-    }
 }
 
 @media (max-width:900px) and (min-width:700px){
+
+    .container-fluid .DYP-img{
+        display: none;
+    }
+
 
     .container-fluid .DYP{
         top: 30%;
@@ -509,63 +394,4 @@ h1, h2, h3, h4{
 
     }
 
-    .position-para{
-        left: 15%;    
-        
-        top: 24%;
-    }
-
-    .position-points{
-        top: 25%;
-        display: grid;
-        grid-template-columns: auto auto;
-    }
-
-    .position-paper{
-        top: 34%;
-        height: 205%;
-    }
-
-    .openSpeech-and-Research-sec{
-        height: 125%;
-    }
-
-    .opening{
-        left: -2%;
-    }
-
-    .research{
-        left: 3%;
-    }
-
-    .resolution-and-profile-sec .resolution{
-        position: relative;
-        top: 4%;
-        left: -15%;
-    }
-
-    
-
-    .resolution-and-profile-sec .country-profile{
-        position: relative;
-        left: 8%;
-        top: -20%;
-    }
-
-    .image-exo{
-        position: relative;
-        top: -17%;
-        left: 65%;
-    }
-
-    .image-exo2{
-        position: relative;
-        top: -22%;
-        left: 8%;
-    }
-
-    #img-exo{
-        width: 250px;
-    }
 }
-
