--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,24 +1,60 @@
-<footer class="container-fluid" style="padding: 0;">
-    <div class="about-Us ">
-        <img src="logo/logo-trans2.png" height="80">
-        <div class="footer-links">
-            <a href="https://docs.google.com/document/d/1kpA3wnTuFQgnhtfqXv3R3SQtBQKnCmSqurqb1xu23Dg/edit">Terms &
-                Conditions</a>
-            <a href="">About Us</a>
-            <a href="mailto:ex@gmail.com?subject=DYPMUN">Contact Us</a>
-        </div>
-        <div class="handles">
-            <p>FOLLOW US ON-</p>
-            <div class="social-media">
-                <a href="https://www.instagram.com/dypimun23/"><i class="bi bi-instagram"></i></a>
-                <a href="https://www.facebook.com/DYPIMUN"><i class="bi bi-facebook"></i></a>
-                <a href="https://www.youtube.com/@DYPIMUN"><i class="bi bi-youtube"></i></a>
-                <a href="https://twitter.com/DYPIMUN"><i class="bi bi-twitter"></i> </a>
+<!DOCTYPE html>
+<html lang="en">
+
+<!-- <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/footer.css" media="screen">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+</head> -->
+
+<body>
+    <section class="footer-sec" id="sec-dcb0">
+
+
+        <div class="footer">
+            <div class="footer-container">
+                <div class="footer-text">
+                    <img src="./logo/logo-trans2.png" height="80" style="margin: 10px;">
+                    <div class="follow-us">
+
+                        <h2 class="follow-us-header">Follow us</h2>
+                        <div class="footer-links">
+                            <a
+                                href="https://docs.google.com/document/d/1kpA3wnTuFQgnhtfqXv3R3SQtBQKnCmSqurqb1xu23Dg/edit">Terms
+                                &
+                                Conditions</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="handles">
+
+                    <div class="social-icons">
+                        <div class="social-icons">
+                            <a href="https://www.instagram.com/dypimun23/"><i class="bi bi-instagram"
+                                    style=" background: rgb(197, 54, 164);;"></i></a>
+                            <a href="https://www.facebook.com/DYPIMUN"><i class="bi bi-facebook"
+                                    style=" background: rgb(59, 89, 152);"></i></a>
+                            <a href="https://www.youtube.com/@DYPIMUN"><i class="bi bi-youtube"
+                                    style=" background: rgb(210, 34, 21);"></i></a>
+                            <a href="https://twitter.com/DYPIMUN"><i class="bi bi-twitter"
+                                    style=" background:#00ccdb;"></i>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="copyright">
+                <p>Copyright © DYPMUN</p>
             </div>
         </div>
-        <div class="copyright">
-            <p>Copyright © DYPMUN</p>
-        </div>
-    </div>
 
-</footer>
+
+    </section>
+</body>
+
+</html>
